LIPS-399 [Client Issue] - In add hashtag page, When user click three  dot (view more) option it overlaps with Add Selected button

--- a/src/assets/sass/custom/_custom.scss
+++ b/src/assets/sass/custom/_custom.scss
@@ -4541,3 +4541,7 @@ figure.feed_fig310 {
       background-color: $white !important;
     }
   }
+
+  .lps_list_repost{
+    width: 100%;
+  }
