--- a/src/assets/sass/custom/_media.scss
+++ b/src/assets/sass/custom/_media.scss
@@ -440,6 +440,11 @@
 .destkVersion .grideTag.product_card.removeFigClass .postBox {
   height: 124px;
 }
+
+
+.removeScroll1 .post_poup .hash_tag_block {
+  height: 250px;
+}
 }
 @media screen and (max-width: 450px) {
   header.main_header .lps_dropdown .lps_dropdown-menu.lps_chatBox_list {
