--- a/src/scenes/Feed/ExploreFeed/components/suggestionList.scss
+++ b/src/scenes/Feed/ExploreFeed/components/suggestionList.scss
@@ -20,6 +20,8 @@
       list-style: none;
       padding: 0;
       margin: 0;
+      display: block;
+      width: 100%;
       .pointer-none {
         pointer-events: none;
       }
@@ -28,6 +30,7 @@
         padding: 8px 15px;
         cursor: pointer;
         transition: all ease-in-out 0.3s;
+        display: block;
         .hashtag-suggestion-user-pic {
             width: 30px;
             height: 30px;
